tests/invalid/psr4/psr4_namespace/src/NamespaceMismatch.php
<?php

namespace App;

final class NamespaceMismatch
{
}

